// [Refactoring] - Optimizing method getAllStudentWithCourse